# synapto

./: README.md  synapto.cabal
src/: Synapto.hs
src/Synapto/: Combinators.hs  Primitives.hs  Token.hs
test/: CombinatorsSpec.hs  PrimitivesSpec.hs
