name:                synapto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/doom/synapto#readme
license:             BSD3
license-file:        LICENSE
author:              Clément Doumergue
maintainer:          clement.doumergue@epitech.eu
copyright:           2019 Clément Doumergue
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Synapto
    Synapto.Primitives
    Synapto.Combinators
    Synapto.Token

  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/doom/synapto

test-suite synapto
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
      , hspec
      , synapto
  other-modules:
--      Synapto.Primitives,
      PrimitivesSpec,
--      Synapto.Combinators,
      CombinatorsSpec

  default-language: Haskell2010
